# course-work

./: CMakeLists.txt  README.md  Test.txt  main.cpp
DataMatrix/: CMakeLists.txt  DataMatrix.cpp  DataMatrix.h
Model/: CMakeLists.txt  LinRegFactory.cpp  LinRegFactory.h  LogRegFactory.cpp  LogRegFactory.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h
Predictor/: CMakeLists.txt  LinearRegressionPredictor.cpp  LinearRegressionPredictor.h  LogRegressionPredictor.cpp  LogRegressionPredictor.h  Predictor.cpp  Predictor.h
Trainer/: CMakeLists.txt  CommonGradient.cpp  CommonGradient.h  GradientCalculator.h  LogLossGradient.cpp  LogLossGradient.h  LogLossStochastic.cpp  LogLossStochastic.h  MSEGradientTrainer.cpp  MSEGradientTrainer.h  MSEStochGradTrainer.cpp  MSEStochGradTrainer.h  StochasticGradient.cpp  StochasticGradient.h  Trainer.cpp  Trainer.h
Trainer/Regularizers/: CMakeLists.txt  Lasso.cpp  Lasso.h  Ridge.cpp  Ridge.h
VectorLib/: VectorLib.h
